2022-02-09  Eric Carlson  <eric.carlson@apple.com>

        WKWebView: WKURLSchemeHandler “request to the end of the resource” produces an invalid header
        https://bugs.webkit.org/show_bug.cgi?id=236401
        rdar://88528286

        Reviewed by Brent Fulgham.

        * TestWebKitAPI/Tests/WebKitCocoa/WKURLSchemeHandler-1.mm:

2022-02-09  J Pascoe  <j_pascoe@apple.com>

        [WebAuthn] Specify LocalAuthenticatorAccessGroup when importing credentials
        https://bugs.webkit.org/show_bug.cgi?id=236311
        rdar://88394179

        Reviewed by Brent Fulgham.

        Added check for accessGroup to API test.

        * TestWebKitAPI/Tests/WebKitCocoa/_WKWebAuthenticationPanel.mm:
        (TestWebKitAPI::WebCore::addKeyToKeychain):
        (TestWebKitAPI::TEST):

2022-02-09  Sihui Liu  <sihui_liu@apple.com>

        Manage IndexedDB storage by origin
        https://bugs.webkit.org/show_bug.cgi?id=234925
        <rdar://problem/87555014>

        Reviewed by Chris Dumez.

        * TestWebKitAPI/Tests/WebKitCocoa/IndexedDBFileName.mm:
        (runTest):
        * TestWebKitAPI/Tests/WebKitCocoa/IndexedDBPersistence.mm:
        * TestWebKitAPI/Tests/WebKitCocoa/IndexedDBSuspendImminently.mm:
        (TEST):
        * TestWebKitAPI/Tests/WebKitCocoa/StoreBlobThenDelete.mm:
        (TEST):

2022-02-09  Martin Robinson  <mrobinson@webkit.org>

        [Flatpak SDK] Add a wrapper for clangd
        https://bugs.webkit.org/show_bug.cgi?id=236240

        Reviewed by Philippe Normand.

        * flatpak/flatpakutils.py: Refactor this file so that the build constants can be
        reused in the new script.
        (convert_webkit_source_path_to_sandbox_path):
        (convert_sandbox_path_to_webkit_source_path):
        (get_build_dir):
        (WebkitFlatpak.__init__):
        (WebkitFlatpak.clean_args):
        (WebkitFlatpak.setup_gstbuild):
        (WebkitFlatpak.is_build_jsc):
        (WebkitFlatpak.run_in_sandbox):
        (WebkitFlatpak.main):